# rust-agent

./: .env.example  .gitignore  Cargo.toml  README.md
examples/: stream_chat.rs
src/: constant.rs  gala.rs  lib.rs  llm.rs  main.rs  models.rs
src/gala/: dataset.rs  models.rs  solver.rs
src/llm/: complete.rs  semaphore.rs  stream.rs  structured.rs
src/models/: action_plan.rs
