[package]
name = "ai-agent"
version = "0.1.0"
edition = "2024"

[[example]]
name = "stream_chat"
path = "examples/stream_chat.rs"

[dependencies]
anyhow = "1.0.102"
async-openai = { version = "0.41.0", features = ["chat-completion"] }
async-stream = "0.3.6"
backon = "1.6.0"
dotenvy = "0.15.7"
futures = "0.3.32"
reqwest = { version = "0.13.4", features = ["json"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
